--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Test Project</title>
 </head>
 <body>
-    <h1>My Name is Imad Ali</h1>
+    <h1>My Name is Muhammad Arshan</h1>
 </body>
 </html>
