--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Test Project</title>
 </head>
 <body>
-    <marquee><h1>My Name is Muhammad Arshan</h1></marquee>
+    <a href="forms.html">Forms Practice here</a>
 </body>
 </html>
